--- a/index.html
+++ b/index.html
@@ -616,10 +616,10 @@
                   <div class="d-flex justify-content-center pb-2">
                     <a
                       class="fancy nav-link"
-                      href="#"
+                      href="syukur.html"
                     >
                       <span class="top-key"></span>
-                      <span class="text">See more</span>
+                      <span class="text">Selengkapnya</span>
                       <span class="bottom-key-1"></span>
                       <span class="bottom-key-2"></span>
                     </a>
@@ -638,10 +638,10 @@
                   <div class="d-flex justify-content-center pb-2">
                     <a
                       class="fancy nav-link"
-                      href="#"
+                      href="tentang.html"
                     >
                       <span class="top-key"></span>
-                      <span class="text">See more</span>
+                      <span class="text">Selengkapnya</span>
                       <span class="bottom-key-1"></span>
                       <span class="bottom-key-2"></span>
                     </a>
@@ -660,10 +660,10 @@
                   <div class="d-flex justify-content-center pb-2">
                     <a
                       class="fancy nav-link"
-                      href="#"
+                      href="persembahan.html"
                     >
                       <span class="top-key"></span>
-                      <span class="text">See more</span>
+                      <span class="text">Selengkapnya</span>
                       <span class="bottom-key-1"></span>
                       <span class="bottom-key-2"></span>
                     </a>
